# gts

./: CMakeLists.txt  config.h.in
src/: CMakeLists.txt  gts.h  isotetra.c
